--- a/lang/de_DE.json
+++ b/lang/de_DE.json
@@ -29,6 +29,10 @@
   "file_selection_group": "Dateiauswahl",
   "select_audio_file_label": "Audiodatei auswählen:",
   "browse_file_button": "Durchsuchen",
+  "play_audio_button": "Abspielen",
+  "stop_audio_button": "Stopp",
+  "play_error_ffplay_not_found_title": "ffplay nicht gefunden",
+  "play_error_ffplay_not_found_message": "ffplay.exe konnte im angegebenen FFmpeg Verzeichnis nicht gefunden werden. Die Wiedergabe ist nicht verfügbar.",
   "file_dialog_title": "Audiodatei auswählen",
   "file_dialog_audio_files": "Audiodateien",
   "file_dialog_wav_files": "WAV Dateien",
