--- a/lang/pl_PL.json
+++ b/lang/pl_PL.json
@@ -29,6 +29,10 @@
   "file_selection_group": "Wybór pliku",
   "select_audio_file_label": "Wybierz plik audio:",
   "browse_file_button": "Przeglądaj",
+  "play_audio_button": "Odtwórz",
+  "stop_audio_button": "Zatrzymaj",
+  "play_error_ffplay_not_found_title": "Nie znaleziono ffplay",
+  "play_error_ffplay_not_found_message": "Nie można znaleźć pliku ffplay.exe w podanym folderze FFmpeg. Odtwarzanie jest niedostępne.",
   "file_dialog_title": "Wybierz plik audio",
   "file_dialog_audio_files": "Pliki audio",
   "file_dialog_wav_files": "Pliki WAV",
