--- a/lang/en_US.json
+++ b/lang/en_US.json
@@ -29,6 +29,10 @@
   "file_selection_group": "File Selection",
   "select_audio_file_label": "Select audio file:",
   "browse_file_button": "Browse",
+  "play_audio_button": "Play",
+  "stop_audio_button": "Stop",
+  "play_error_ffplay_not_found_title": "ffplay Not Found",
+  "play_error_ffplay_not_found_message": "ffplay.exe could not be found in the specified FFmpeg directory. Playback is not available.",
   "file_dialog_title": "Select Audio File",
   "file_dialog_audio_files": "Audio Files",
   "file_dialog_wav_files": "WAV Files",
